# jelly-hsproject

./: LICENSE  README.md  package-lock.json
backend/: .dockerignore  Dockerfile  addCaptions.py  app.py  caption.ipynb  captions.srt  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  runFfmpeg.py  temp.py
backend/config/: captions_config.py  convert_config.py  error_config.py  genai_config.py  log.py  router_config.py  tensor_config.py  transcribe_config.py  upload_config.py
backend/handler/: error_handler.py
backend/temp/: response.srt
backend/uploads/: .temp
docs/: CODEOWNERS
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: actions.ts  globals.css  header.tsx  layout.tsx  page.tsx  sidebar.tsx
frontend/app/api/createJelly/: route.ts
frontend/app/gallery/: gallery.tsx  layout.tsx  page.tsx
frontend/app/generate/: layout.tsx  page.tsx
frontend/components/: animated-feature.tsx  testimonials.tsx  wobble-grid.tsx
frontend/components/magicui/: confetti.tsx
frontend/components/ui/: background-gradient-animations.tsx  toaster.tsx  use-toast.ts
frontend/prisma/: schema.prisma
